<resources>
    <string name="digit_dni">Digite el DNI</string>
    <string name="app_name">IspAdmin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="technician">Técnico</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="label" />
    <string name="title_activity_main2">MainActivity2</string>
    <string name="plan">Plan</string>
    <string name="network_device">Dispositivo De Red</string>
    <string name="login_Error_Tittle">Ocurrio un Error</string>
    <string name="menu_plan">Registrar Plan</string>
    <string name="menu_device">Registrar Equipo</string>
    <string name="menu_subscription">Registrar Subscripción</string>
    <string name="abreviatura">Abreviatura</string>
    <string name="nombre">Nombre</string>
    <string name="lugar">Lugar</string>
    <string name="codigo">Codigo</string>
    <string name="direccion">Direccion</string>
    <string name="registrar">REGISTRAR</string>
    <string name="registrar_ubicacion">Registrar Ubicacion</string>
    <string name="registrar_tecnicos">Registrar tecnico</string>
    <string name="registrar_caja_nap">Registrar caja nap</string>
    <string name="longitud">Longitud</string>
    <string name="crear_datos">Crear Datos</string>
    <string name="ver_orden_de_servicios">Ver Orden de Servicios</string>
    <string name="registrar_orden_de_servicio">Registrar Orden de Servicio</string>
    <string name="ver_t_cnicos">Ver Técnicos</string>
    <string name="Lugar">Lugar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Ubicación</string>
    <string name="register">Registrar</string>
    <string name="confirm">Confirmar</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="nap_box">Caja Nap</string>
    <string name="consult_payments">Consultar Pagos</string>
    <string name="debtors">Deudores</string>
    <string name="dashboard">Dashboard</string>
    <string name="find_subscription">Buscar Suscripciones</string>
    <string name="register_payment">Registrar pago</string>
    <string name="show_payment_history">Mostrar historial de pagos</string>
    <string name="describe_issue">Describe el problema</string>
    <string name="select_location">Seleccione la ubicacion</string>
    <string name="register_service_order">Registrar orden de servicio</string>
    <string name="installed_device">Dispositivo de red instalado</string>
    <string name="device_type">Tipo de dispositivo</string>
    <string name="ip_address">Direccion ip</string>
    <string name="motivo_de_descuento">Motivo de Descuento</string>
    <string name="descuento">Descuento</string>
    <string name="metodo_de_pago">Metodo de Pago</string>
    <string name="planPayment">Plan</string>
    <string name="registrar_pagos">Registrar Pagos</string>
    <string name="ip_pool">Pool de ips</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="ip_segment">Segmento de ip</string>
    <string name="disclaimer_payment_list">Se estan mostrando solo los ultimos %s pagos</string>
    <string name="filter">Filtrar</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="edit_subscription">Editar suscripcion</string>
    <string name="host_device">Dispositivo host</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="billing_date">Fecha de facturacion</string>
    <string name="pay_date">Fecha de pago</string>
    <string name="payment_method">Metodo de pago</string>
    <string name="discount_amount">Monto descontado</string>
    <string name="discount_reason">Razon del descuento</string>
    <string name="amount">Monto</string>
    <string name="status">Estado</string>
    <string name="search">Buscar</string>
    <string name="all">Todos</string>
    <string name="not_paid">No pagados</string>
    <string name="only_pending">Solo pendientes</string>
    <string name="go_to_pay">Ir a pagar</string>
    <string name="reports">Reportes</string>
    <string name="support_tickets">Tickets de soporte</string>
    <string name="create_support_tickets">Crear ticket de soporte</string>
    <string name="get_active_debtors">Obtener deudores con servicio activo</string>
    <string name="get_cancelled_debtors">Obtener deudores con servicio cancelado</string>
    <string name="download_speed_in_mb">Velocidad de descarga en MB</string>
    <string name="upload_speed_in_mb">Velocidad de subida en MB</string>
    <string name="see_nap_boxes">Ver Cajas Nap</string>
    <string name="Mufas">Mufas</string>
    <string name="previous_treatment">Detalles adicionales</string>
    <string name="fiber">Fibra</string>
    <string name="wireless">Int. Inalambrico</string>
    <string name="instalation_type">Tipo de instalacion</string>
    <string name="select_cpe_device">Seleccione el dispositivo CPE</string>
    <string name="aditional_devices">Equipos adicionales</string>
    <string name="additionalDevices">Dispositivos adicionales</string>
    <string name="note">Nota (Opcional)</string>
    <string name="installing_additionals">Se instalaran adicionales</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="fieldMustNotBeEmpty">Este campo no puede estar vacio o contener caracteres especiales</string>
    <string name="name">Nombres</string>
    <string name="fullName">Nombre</string>
    <string name="lastName">Apellidos</string>
    <string name="dni">DNI</string>
    <string name="invalidDNI">DNI no valido</string>
    <string name="password">Contraseña</string>
    <string name="address">Direción</string>
    <string name="mustSelectLocation">Seleccione una ubicación</string>
    <string name="phoneNumer">Teléfono</string>
    <string name="price">Precio</string>
    <string name="coupon">Cupón</string>
    <string name="invalidPhoneNumber">Número de teléfono no valido</string>
    <string name="invalidPrice">Precio no valido</string>
    <string name="place">Lugar</string>
    <string name="mustSelectPlan">Seleccione un plan</string>
    <string name="mustSelectPlace">Seleccione un lugar</string>
    <string name="mustSelectTechnician">Seleccione un técnico</string>
    <string name="mustSelectHostDevice">Seleccione un dispositivo host</string>
    <string name="subscriptionDate">Fecha de suscripción</string>
    <string name="mustSelectSubscriptionDate">Selecione una fecha de suscripción</string>
    <string name="mustSelectCpeDevice">Seleccione el dispoisitivo a instalar</string>
    <string name="selec_nap_box">Seleccione una caja nap</string>
    <string name="mustSelectNapBox">Seleccione una caja nap</string>
    <string name="youCanSelectAdditionalNetworkDevices">(Opcional) Puede seleccionar dispositivos adicionales</string>
    <string name="errorNote">"Probando el error"</string>
    <string name="metododepago">Metodo de pago</string>
    <string name="selectAMufa">Seleccione una mufa</string>
    <string name="mustSelectMufa">Debe seleccionar una mufa</string>
    <string name="enterACode">Digite un código</string>
    <string name="mustDigitACode">Debe digitar un coódigo</string>
    <string name="enterAddress">Digite una dirección</string>
    <string name="mustDigitAddress">Debe digitar una dirección</string>
    <string name="selectALocation">Seleccione una ubicación</string>
    <string name="select_onu">Seleccione una onu</string>
    <string name="mustSelectOnu">Seleccione una onu</string>
    <string name="subscription_register_success">El cliente fue registrado con exito\n<b>Ip: %s</b></string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="escriba_su_contrasena">Escriba su Contrasena</string>
    <string name="escriba_su_usuario">Escriba su usuario</string>
    <string name="activate">Activar</string>
    <string name="mustDigiUsername">Debes digitar tu nombre de usuario</string>
    <string name="username">Nombre de usuario</string>
    <string name="mustDigitPassword">Debe digitar su contraseña</string>
    <string name="saveSession">Mantener sesión iniciada</string>
    <string name="isMigration">Es una migración</string>
    <string name="empty" />
    <string name="editPlanSuccess">Se actualizó el plan correctamente</string>
    <string name="edit_plan">Editar plan</string>
    <string name="edit_plan_success">Se actualizó el plan correctamente</string>
    <string name="subscription_details">Detalles de la suscripción</string>
    <string name="new_plan">Nuevo plan</string>
    <string name="error">Error</string>
    <string name="success">Éxito</string>
    <string name="ok">Aceptar</string>
    <string name="edit">Editar</string>
    <string name="must_select_plan">Debe seleccionar un plan</string>
    <string name="see_details">Ver detalles</string>
    <string name="new_service_for_customer">Nuevo servicio para este cliente</string>
    <string name="name1">Nombre</string>
    <string name="id">ID</string>
    <string name="clickForOpenMap">click aqui para abrir el mapa</string>
    <string name="DNI">DNI</string>
    <string name="find">Buscar</string>
    <string name="start_date">Fecha de inicio</string>
    <string name="end_date">Fecha de fin</string>
    <string name="must_digit_dni">Debe digital el dni</string>
    <string name="must_select_start_date">Debe seleccionar una fecha de inicio</string>
    <string name="must_select_end_date">Debe seleccionar una fecha de fin</string>
    <string name="plans">Planes</string>
    <string name="total_gross">Total bruto</string>
    <string name="outstanding">Por Cobrar</string>
    <string name="collected">Recaudado</string>
    <string name="discounted">Descontado</string>
    <string name="monthly_monetary_resume">Resumen monetario mensual</string>
    <string name="concept">Concepto</string>
    <string name="pen_symbol">S/.</string>
    <string name="electronic_payments_history">Pagos electrónicos por mes</string>
    <string name="monthly_costumers_resume">Resumen mensual de clientes</string>
    <string name="quantity">Cantidad</string>
    <string name="Fiber">Int. Fibra</string>
    <string name="cancelledByUser">Cancel. manual</string>
    <string name="cancelledBySystem">Cancel. sistema</string>
    <string name="active_customers_history">Clientes activos por mes</string>
    <string name="monthly_collects_history">Recaudacion por mes</string>
    <string name="delete_onu">Eliminar Onu</string>
    <string name="outlays">Egresos</string>
    <string name="find_payer">Buscar pagador</string>
    <string name="gross_revenue_per_month">Ingresos brutos por mes</string>
    <string name="cableTv">Tv Cable</string>
    <string name="fixed_costs">Gastos fijos</string>
    <string name="variable_costs">Gastos variables</string>
    <string name="utilities">Margen</string>
    <string name="freeCash">Libre</string>
    <string name="installation_orders">Órdenes de Instalación</string>
    <string name="create_installation_order">Crear Orden</string>
    <string name="view_pending_orders">Ver Órdenes Pendientes</string>
    <string name="assigned_orders">Órdenes Asignadas</string>
    <string name="see_support_tickets">Ver tickets de soporte</string>
    <string name="subscription_menu">Subscripción</string>
</resources>