<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/dashboard"
            android:visible="false" />
        <item
            android:id="@+id/nav_subscriptions_menu"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/subscription_menu">
            <menu>
                <item
                    android:id="@+id/registerSubscriptionComposeFragment"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/menu_subscription"
                    android:visible="false" />
                <item
                    android:id="@+id/nav_find_subscriptions"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/find_subscription"
                    android:visible="false" />
            </menu>
        </item>

        <!-- Sección de Órdenes de Instalación -->
        <item
            android:id="@+id/nav_installation_orders"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/installation_orders">
            <menu>
                <item
                    android:id="@+id/nav_create_installation_order"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/create_installation_order"
                    android:visible="true" />
                <item
                    android:id="@+id/pendingInstallationOrdersFragment"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/view_pending_orders"
                    android:visible="false" />
                <item
                    android:id="@+id/assignedInstallationOrdersFragment"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/assigned_orders"
                    android:visible="false" />
            </menu>
        </item>

        <item
            android:id="@+id/nav_deleteOnuFragment"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/delete_onu"
            android:visible="false" />
        <item
            android:id="@+id/nav_support_tickets_menu"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/support_tickets">
            <menu>
                <item
                    android:id="@+id/nav_create_support_ticket"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/create_support_tickets"
                    android:visible="false" />
                <item
                    android:id="@+id/nav_support_assistance_tickets"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/see_support_tickets"
                    android:visible="false" />
            </menu>
        </item>
        <item
            android:id="@+id/nav_find_payer"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/find_payer"
            android:visible="true" />

        <item
            android:id="@+id/nav_outlays"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/outlays"
            android:visible="false" />
        <item
            android:id="@+id/nav_fixed_cost"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/fixed_costs"
            android:visible="false" />

        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/reports"
            android:visible="false" />

        <!--        <item
                    android:id="@+id/nav_plan"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/menu_plan" />

                <item
                    android:id="@+id/nav_device"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/menu_device" />

                <item
                    android:id="@+id/nav_register_place"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/registrar_ubicacion" />
                <item
                    android:id="@+id/nav_to_register_technician"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/registrar_tecnicos" />
                <item
                    android:id="@+id/nav_to_register_nap_box"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/registrar_caja_nap" />

                <item
                    android:id="@+id/nav_view_services_order_list"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/ver_orden_de_servicios" />

                <item
                    android:id="@+id/nav_see_nap_boxes"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="@string/see_nap_boxes" />

                <item
                    android:id="@+id/see_network_device_list"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="Ver Lista de Dispositivos"/>
                <item
                    android:id="@+id/nav_see_place_list"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="Ver Lista de Lugares"/>
                <item
                    android:id="@+id/see_technician_list"
                    android:icon="@drawable/ic_launcher_foreground"
                    android:title="Ver Lista de tecnicos"/>
        -->
        <item
            android:id="@+id/nav_mufa"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/Mufas"
            android:visible="false" />

        <!--        <item-->
        <!--            android:id="@+id/nav_ip_pool"-->
        <!--            android:icon="@drawable/ic_launcher_foreground"-->
        <!--            android:title="@string/ip_pool" />-->
        <item
            android:id="@+id/nav_see_plan_list"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/plans"
            android:visible="false" />

        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/mi_perfil" />
    </group>
</menu>