<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dashboardDataResponse"
            type="com.dscorp.ispadmin.domain.model.DashBoardDataResponse" />

        <variable
            name="viewModel"
            type="com.dscorp.ispadmin.presentation.ui.features.dashboard.DashBoardViewModel" />

        <import type="com.dscorp.ispadmin.domain.model.User.UserType" />

        <import type="android.view.View" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:visibility="visible">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shimmer_auto_start="true">

            <LinearLayout
                android:id="@+id/dashboardContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="24dp"
                android:paddingVertical="48dp">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/monthly_monetary_resume"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/chart1"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="24dp"

                    />

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp">

                    <TableRow style="@style/dashboard_row_header">

                        <TextView
                            android:id="@+id/category_table_header"
                            style="@style/dashboard_row_header_child"
                            android:text="@string/concept" />


                        <TextView
                            android:id="@+id/value_table_header"
                            style="@style/dashboard_row_header_child"
                            android:text="@string/pen_symbol" />

                    </TableRow>

                    <TableRow style="@style/dashboard_row_light">

                        <TextView
                            style="@style/dashboard_row_category"
                            android:text="@string/total_gross" />

                        <TextView
                            android:id="@+id/total_gross"
                            style="@style/dashboard_row_value"
                            android:text="@{dashboardDataResponse.grossRevenueAsString()}"
                            tools:text="5022222" />

                    </TableRow>

                    <TableRow style="@style/dashboard_row_dark">

                        <TextView
                            style="@style/dashboard_row_category"
                            android:text="@string/outstanding" />


                        <TextView
                            android:id="@+id/outstanding"
                            style="@style/dashboard_row_value"
                            android:text="@{dashboardDataResponse.totalToCollectAsString}"
                            tools:text="40" />

                    </TableRow>

                    <TableRow style="@style/dashboard_row_dark">

                        <TextView
                            style="@style/dashboard_row_category"

                            android:text="@string/discounted" />


                        <TextView
                            android:id="@+id/discounted"
                            style="@style/dashboard_row_value"
                            android:text="@{dashboardDataResponse.totalDiscountAsString}"
                            tools:text="30" />

                    </TableRow>

                    <TableRow style="@style/dashboard_row_light">

                        <TextView
                            style="@style/dashboard_row_category"
                            android:text="@string/collected" />

                        <TextView
                            android:id="@+id/collected"
                            style="@style/dashboard_row_value"
                            android:text="@{dashboardDataResponse.totalRaisedAsString()}"
                            tools:text="20" />
                    </TableRow>

                    <TableRow style="@style/dashboard_row_dark">

                        <TextView
                            style="@style/dashboard_row_category"
                            android:text="@string/fixed_costs" />

                        <TextView
                            android:id="@+id/fixed_costs"
                            style="@style/dashboard_row_value"
                            android:text="@{dashboardDataResponse.fixedCostsAsString()}"
                            tools:text="30" />
                    </TableRow>

                    <TableRow style="@style/dashboard_row_dark">

                        <TextView
                            style="@style/dashboard_row_category"

                            android:text="@string/variable_costs" />

                        <TextView
                            android:id="@+id/variable_costs"
                            style="@style/dashboard_row_value"
                            android:text="@{dashboardDataResponse.variableCostsAsString()}"
                            tools:text="30" />

                    </TableRow>

                    <TableRow style="@style/dashboard_row_dark">

                        <TextView
                            style="@style/dashboard_row_category"
                            android:text="@string/utilities" />

                        <TextView
                            android:id="@+id/utilities"
                            style="@style/dashboard_row_value"
                            android:text="@{dashboardDataResponse.marginAsString()}"
                            tools:text="30" />

                    </TableRow>

                    <TableRow style="@style/dashboard_row_dark">

                        <TextView
                            style="@style/dashboard_row_category"
                            android:text="@string/freeCash" />

                        <TextView
                            android:id="@+id/freeCash"
                            style="@style/dashboard_row_value"
                            android:text="@{dashboardDataResponse.freeCashAsString()}"
                            tools:text="30" />

                    </TableRow>
                </TableLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:gravity="center"
                    android:text="@string/monthly_costumers_resume"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp">

                    <TableRow style="@style/dashboard_row_header">

                        <TextView
                            android:id="@+id/customer_category_table_header"
                            style="@style/dashboard_row_header_child"
                            android:text="@string/concept" />


                        <TextView
                            android:id="@+id/customer_value_table_header"
                            style="@style/dashboard_row_header_child"
                            android:text="@string/quantity" />

                    </TableRow>

                    <TableRow style="@style/dashboard_row_light">

                        <TextView
                            style="@style/dashboard_row_category"
                            android:text="@string/cableTv" />

                        <TextView
                            android:id="@+id/fiber_tv_cable_new_subscriptions"
                            style="@style/dashboard_row_value"
                            tools:text="1" />

                    </TableRow>

                    <TableRow style="@style/dashboard_row_dark">

                        <TextView
                            style="@style/dashboard_row_category"
                            android:text="@string/Fiber" />

                        <TextView
                            android:id="@+id/fiber_new_subscriptions"
                            style="@style/dashboard_row_value"
                            tools:text="1" />

                    </TableRow>

                    <TableRow style="@style/dashboard_row_light">

                        <TextView
                            style="@style/dashboard_row_category"
                            android:text="@string/wireless" />

                        <TextView
                            android:id="@+id/wireless_new_subscriptions"
                            style="@style/dashboard_row_value"
                            tools:text="2" />

                    </TableRow>

                    <TableRow style="@style/dashboard_row_dark">

                        <TextView
                            style="@style/dashboard_row_category"
                            android:text="@string/cancelledByUser" />

                        <TextView
                            android:id="@+id/cancelledByUser"
                            style="@style/dashboard_row_value"
                            tools:text="0" />

                    </TableRow>

                    <TableRow style="@style/dashboard_row_light">

                        <TextView
                            style="@style/dashboard_row_category"
                            android:text="@string/cancelledBySystem" />

                        <TextView
                            android:id="@+id/cancelledBySystem"
                            style="@style/dashboard_row_value"
                            tools:text="0" />

                    </TableRow>

                </TableLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:gravity="center"
                    android:text="@string/gross_revenue_per_month"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />


                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/gross_revenue_history_linear_chart"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:gravity="center"
                    android:text="@string/active_customers_history"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />


                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/active_subscription_history_linear_chart"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:gravity="center"
                    android:text="@string/electronic_payments_history"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/payment_methods_bar_chart"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:gravity="center"
                    android:text="@string/monthly_collects_history"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/monthly_collects_bar_chart"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="24dp" />


            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>


    </ScrollView>

</layout>